--- a/_posts/2020-09-09-post2.markdown
+++ b/_posts/2020-09-09-post2.markdown
@@ -39,6 +39,11 @@
 
 
 
+
+
+
+
+
 ### 2. equals를 재정의하려거든 hashCode도 재정의하라 
 
 - equals를 재정의한 클래스 모두에서 hashCode도 재정의해야 한다.
@@ -57,8 +62,8 @@
 
 
 
-자
-### 3. toString을 항상 재정의하
+
+### 3. toString을 항상 재정의하자
 
 - toString을 잘 구현한 클래스는 사용하기에 훨씬 즐겁고, 그 클래스를 사용한 시스템은 디버깅하기 쉽다.
 - 실전에서 toString은 그 객체가 가진 주요 정보 모두를 반환하는 게 좋다.
